@@ -4,6 +4,9 @@ package Munin;
 # $Id$
 #
 # $Log$
+# Revision 1.4  2004/05/16 00:33:07  jimmyo
+# Added a descriptionary table at the bottom of the service view page. Also added "graph_info" and "<field>.info" which can be used by plugins to supply supplementary information for it.
+#
 # Revision 1.3  2004/01/29 18:19:58  jimmyo
 # Made Munin compatible with perl 5.005_03 (patch by Lupe Christoph) (SF#884622)
 #
@@ -90,6 +93,7 @@ use Exporter;
 	   'munin_delete',
 	   'munin_overwrite',
 	   'munin_config',
+	   'munin_draw_field',
 	   'munin_get_bool',
 	   'munin_get_bool_val',
 	   'munin_get_val',
@@ -116,7 +120,7 @@ my @legal = ("tmpldir", "ncsa", "ncsa_server", "ncsa_config", "rundir",
 	"special_sum", "stack", "sum", "address", "htaccess", "warn",
 	"use_default_name", "use_node_name", "port", "graph_noscale",
 	"nsca", "nsca_server", "nsca_config", "extinfo", "fetch_data",
-	"filename", "max_processes", "nagios"
+	"filename", "max_processes", "nagios", "info", "graph_info"
     );
 
 
@@ -131,6 +135,15 @@ sub munin_fetch {
     my @array = map { @$_[0] } splice(@$data, $#$data - ($last || 1));
     return $array[0] if (!$last);
     return @array;
+}
+
+sub munin_draw_field {
+    my $node    = shift;
+    my $service = shift;
+    my $field   = shift;
+
+    return 0 if (exists $node->{client}->{$service}->{$field.".skipdraw"});
+    return (&munin_get_bool_val ($node->{client}->{$service}->{$field.".graph"}, 1));
 }
 
 sub munin_nscasend {
