@@ -31,6 +31,9 @@
       <td><img src="<TMPL_VAR NAME="IMGMONTH">" alt="monthly graph" /></td>
       <td><img src="<TMPL_VAR NAME="IMGYEAR">" alt="yearly graph" /></td>
     </tr>
+	<tr>
+	  <td colspan=2><div class="legendbox"><TMPL_VAR NAME="FIELDLIST"></div></td>
+	</tr>
   </table>
  </TMPL_LOOP>
   <div class="linkbox">
